# ChatServer

./: CMakeLists.txt  Note.md
3rd/: json.cmake  spdlog.cmake
apps/: CMakeLists.txt  app.cpp
apps/client/: CMakeLists.txt  ChatClient.hpp  ChatProtocol.hpp  ChatService.cpp  ChatService.hpp  main.cpp
apps/imgui_client/apps/: CMakeLists.txt  login.hpp  main.cpp
proto/: AddFriend.proto  AddFriendACK.proto  AddGroupReq.proto  AddGroupReqACK.proto  CreateGroup.proto  CreateGroupACK.proto  GroupChat.proto  GroupChatACK.proto  HandleFriendReq.proto  HandleFriendReqACK.proto  Heartbeat.proto  HeartbeatACK.proto  Login.proto  LoginACK.proto  Logout.proto  LogoutACK.proto  P2PChatMsg.proto  P2PChatMsgACK.proto  Register.proto  RegisterACK.proto
src/: CMakeLists.txt
src/db/: db.cpp
src/include/common/: logger.hpp
src/include/common/db/: db.hpp
src/include/common/redis/: redis.hpp
src/include/model/: friendModel.hpp  groupModel.hpp  offlineGroupMsgModel.hpp  offlineMsgModel.hpp  userModel.hpp
src/include/server/: ChatServer.hpp  ChatService.hpp  ChatTcpConn.hpp
src/redis/: redis.cpp
src/server/: ChatServer.cpp  ChatService.cpp  ChatTcpConn.cpp
src/server/model/: friendModel.cpp  groupModel.cpp  offlineGroupMsgModel.cpp  offlineMsgModel.cpp  userModel.cpp
tests/: CMakeLists.txt  access_mysql.cpp  access_redis.cpp  mysql_conf.json  redis_conf.json
